[gd_scene load_steps=6 format=3 uid="uid://bxq4n7wqv3ygb"]

[ext_resource type="Script" path="res://parent_dashboard.gd" id="1_dashboard"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sidebar"]
bg_color = Color(0.06, 0.07, 0.09, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_main"]
bg_color = Color(0.08, 0.09, 0.11, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_card"]
bg_color = Color(0.1, 0.11, 0.14, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.15, 0.17, 0.22, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn"]
bg_color = Color(0.18, 0.5, 0.38, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="ParentDashboard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dashboard")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Sidebar" type="PanelContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sidebar")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Sidebar"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Sidebar/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="LogoContainer" type="VBoxContainer" parent="HBoxContainer/Sidebar/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="Logo" type="Label" parent="HBoxContainer/Sidebar/MarginContainer/VBoxContainer/LogoContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.45, 0.75, 0.55, 1)
theme_override_font_sizes/font_size = 22
text = "CHORE LOBBY"

[node name="Tagline" type="Label" parent="HBoxContainer/Sidebar/MarginContainer/VBoxContainer/LogoContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.45, 0.5, 1)
theme_override_font_sizes/font_size = 10
text = "PARENT DASHBOARD"
uppercase = true

[node name="Spacer1" type="Control" parent="HBoxContainer/Sidebar/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="UserInfo" type="VBoxContainer" parent="HBoxContainer/Sidebar/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="WelcomeLabel" type="Label" parent="HBoxContainer/Sidebar/MarginContainer/VBoxContainer/UserInfo"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.88, 0.92, 1)
theme_override_font_sizes/font_size = 16
text = "Welcome, Parent"

[node name="FamilyIDLabel" type="Label" parent="HBoxContainer/Sidebar/MarginContainer/VBoxContainer/UserInfo"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.55, 0.6, 1)
theme_override_font_sizes/font_size = 12
text = "Family ID: XXXXX"

[node name="Spacer2" type="Control" parent="HBoxContainer/Sidebar/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="NavLabel" type="Label" parent="HBoxContainer/Sidebar/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.45, 0.5, 1)
theme_override_font_sizes/font_size = 11
text = "NAVIGATION"
uppercase = true

[node name="NavButtons" type="VBoxContainer" parent="HBoxContainer/Sidebar/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="BtnNavChores" type="Button" parent="HBoxContainer/Sidebar/MarginContainer/VBoxContainer/NavButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.92, 0.95, 1)
theme_override_font_sizes/font_size = 14
flat = true
text = "Chores"
alignment = 0

[node name="BtnNavRewards" type="Button" parent="HBoxContainer/Sidebar/MarginContainer/VBoxContainer/NavButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.65, 0.7, 1)
theme_override_font_sizes/font_size = 14
flat = true
text = "Rewards"
alignment = 0

[node name="BtnNavApprovals" type="Button" parent="HBoxContainer/Sidebar/MarginContainer/VBoxContainer/NavButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.75, 0.4, 1)
theme_override_font_sizes/font_size = 14
flat = true
text = "Approvals"
alignment = 0

[node name="BtnNavFamily" type="Button" parent="HBoxContainer/Sidebar/MarginContainer/VBoxContainer/NavButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.65, 0.7, 1)
theme_override_font_sizes/font_size = 14
flat = true
text = "Family"
alignment = 0

[node name="BtnNavHistory" type="Button" parent="HBoxContainer/Sidebar/MarginContainer/VBoxContainer/NavButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.65, 0.7, 1)
theme_override_font_sizes/font_size = 14
flat = true
text = "History"
alignment = 0

[node name="Spacer3" type="Control" parent="HBoxContainer/Sidebar/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BtnLogout" type="Button" parent="HBoxContainer/Sidebar/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 13
flat = true
text = "Sign Out"
alignment = 0

[node name="MainContent" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_main")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MainContent"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 28
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 28

[node name="ContentContainer" type="VBoxContainer" parent="HBoxContainer/MainContent/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PageHeader" type="HBoxContainer" parent="HBoxContainer/MainContent/MarginContainer/ContentContainer"]
layout_mode = 2

[node name="PageTitle" type="Label" parent="HBoxContainer/MainContent/MarginContainer/ContentContainer/PageHeader"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.9, 0.92, 0.95, 1)
theme_override_font_sizes/font_size = 26
text = "Chores"

[node name="BtnAddChore" type="Button" parent="HBoxContainer/MainContent/MarginContainer/ContentContainer/PageHeader"]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 40)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_btn")
text = "ADD CHORE"

[node name="BtnAddReward" type="Button" parent="HBoxContainer/MainContent/MarginContainer/ContentContainer/PageHeader"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(140, 40)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_btn")
text = "ADD REWARD"

[node name="ContentScroll" type="ScrollContainer" parent="HBoxContainer/MainContent/MarginContainer/ContentContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ChoresList" type="VBoxContainer" parent="HBoxContainer/MainContent/MarginContainer/ContentContainer/ContentScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="RewardsList" type="VBoxContainer" parent="HBoxContainer/MainContent/MarginContainer/ContentContainer/ContentScroll"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="FamilyList" type="VBoxContainer" parent="HBoxContainer/MainContent/MarginContainer/ContentContainer/ContentScroll"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="HistoryContainer" type="VBoxContainer" parent="HBoxContainer/MainContent/MarginContainer/ContentContainer/ContentScroll"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="CompletedSection" type="VBoxContainer" parent="HBoxContainer/MainContent/MarginContainer/ContentContainer/ContentScroll/HistoryContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="HBoxContainer/MainContent/MarginContainer/ContentContainer/ContentScroll/HistoryContainer/CompletedSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.65, 0.7, 1)
theme_override_font_sizes/font_size = 14
text = "COMPLETED CHORES"
uppercase = true

[node name="CompletedChoresList" type="VBoxContainer" parent="HBoxContainer/MainContent/MarginContainer/ContentContainer/ContentScroll/HistoryContainer/CompletedSection"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8

[node name="RedeemedSection" type="VBoxContainer" parent="HBoxContainer/MainContent/MarginContainer/ContentContainer/ContentScroll/HistoryContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="HBoxContainer/MainContent/MarginContainer/ContentContainer/ContentScroll/HistoryContainer/RedeemedSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.65, 0.7, 1)
theme_override_font_sizes/font_size = 14
text = "REDEEMED REWARDS"
uppercase = true

[node name="RedeemedRewardsList" type="VBoxContainer" parent="HBoxContainer/MainContent/MarginContainer/ContentContainer/ContentScroll/HistoryContainer/RedeemedSection"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8

[node name="ChoreDialog" type="Window" parent="."]
unique_name_in_owner = true
title = "Add Chore"
initial_position = 2
size = Vector2i(420, 360)
visible = false

[node name="PanelContainer" type="PanelContainer" parent="ChoreDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ChoreDialog/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="ChoreDialog/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TitleLabel" type="Label" parent="ChoreDialog/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.55, 0.6, 1)
theme_override_font_sizes/font_size = 12
text = "TITLE"
uppercase = true

[node name="ChoreTitleInput" type="LineEdit" parent="ChoreDialog/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 15
placeholder_text = "Enter chore title"

[node name="DescLabel" type="Label" parent="ChoreDialog/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.55, 0.6, 1)
theme_override_font_sizes/font_size = 12
text = "DESCRIPTION (OPTIONAL)"
uppercase = true

[node name="ChoreDescInput" type="TextEdit" parent="ChoreDialog/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 14
placeholder_text = "Add details about the chore"

[node name="PointsLabel" type="Label" parent="ChoreDialog/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.55, 0.6, 1)
theme_override_font_sizes/font_size = 12
text = "POINTS REWARD"
uppercase = true

[node name="ChorePointsInput" type="SpinBox" parent="ChoreDialog/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
min_value = 1.0
max_value = 1000.0
value = 10.0

[node name="ButtonContainer" type="HBoxContainer" parent="ChoreDialog/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 2
theme_override_constants/separation = 12

[node name="BtnCancelChore" type="Button" parent="ChoreDialog/PanelContainer/MarginContainer/VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 38)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Cancel"

[node name="BtnSaveChore" type="Button" parent="ChoreDialog/PanelContainer/MarginContainer/VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 38)
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_btn")
text = "Save"

[node name="RewardDialog" type="Window" parent="."]
unique_name_in_owner = true
title = "Add Reward"
initial_position = 2
size = Vector2i(420, 360)
visible = false

[node name="PanelContainer" type="PanelContainer" parent="RewardDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="RewardDialog/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="RewardDialog/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TitleLabel" type="Label" parent="RewardDialog/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.55, 0.6, 1)
theme_override_font_sizes/font_size = 12
text = "TITLE"
uppercase = true

[node name="RewardTitleInput" type="LineEdit" parent="RewardDialog/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 15
placeholder_text = "Enter reward title"

[node name="DescLabel" type="Label" parent="RewardDialog/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.55, 0.6, 1)
theme_override_font_sizes/font_size = 12
text = "DESCRIPTION (OPTIONAL)"
uppercase = true

[node name="RewardDescInput" type="TextEdit" parent="RewardDialog/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 14
placeholder_text = "Add details about the reward"

[node name="CostLabel" type="Label" parent="RewardDialog/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.55, 0.6, 1)
theme_override_font_sizes/font_size = 12
text = "POINTS COST"
uppercase = true

[node name="RewardCostInput" type="SpinBox" parent="RewardDialog/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
min_value = 1.0
max_value = 1000.0
value = 50.0

[node name="ButtonContainer" type="HBoxContainer" parent="RewardDialog/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 2
theme_override_constants/separation = 12

[node name="BtnCancelReward" type="Button" parent="RewardDialog/PanelContainer/MarginContainer/VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 38)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Cancel"

[node name="BtnSaveReward" type="Button" parent="RewardDialog/PanelContainer/MarginContainer/VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 38)
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_btn")
text = "Save"
